<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    tools:context=".ResultadoActivity">


    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/vistaResultado"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/titulo"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="50sp"
            android:fontFamily="sans-serif-black">

        </TextView>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/vistaResultado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/linear1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnReCalcular">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblResuladoCorto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/resultadoCorto"
                android:textColor="@color/background_button"
                android:textSize="35sp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black"
                android:layout_marginBottom="40dp">

            </TextView>
            <TextView
                android:id="@+id/lblNumeroCalculado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/resultadoNumerico"
                android:textColor="@color/white"
                android:textSize="80sp"
                android:fontFamily="sans-serif-black"
                android:textAllCaps="true">
            </TextView>

            <TextView
                android:id="@+id/lblDescripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/resultadoDescripcion"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:fontFamily="sans-serif-medium"
                android:layout_marginTop="50dp">
            </TextView>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/btnReCalcular"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/ReCalcular"
        android:textSize="25sp"
        android:background="@drawable/boton_redondeado"
        app:layout_constraintTop_toBottomOf="@id/vistaResultado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="30dp">

    </Button>








</androidx.constraintlayout.widget.ConstraintLayout>